--- a/theme/openconext/templates/modules/Authentication/View/Index/index.html.twig
+++ b/theme/openconext/templates/modules/Authentication/View/Index/index.html.twig
@@ -53,6 +53,17 @@
                         </ul>
                     </dd>
                     <dt>
+                        The Public SAML metadata (the entities descriptor) for all the REAL {{ 'suite_name'|trans }} IdPs
+                    </dt>
+                    <dd>
+                        <ul>
+                            <li><a href="/authentication/proxy/real-idps-metadata">Open link</a></li>
+                            {% for keyId in keyPairIds %}
+                                <li><a href="/authentication/proxy/real-idps-metadata/key:{{ keyId }}">Open link</a></li>
+                            {% endfor %}
+                        </ul>
+                    </dd>
+                    <dt>
                         <p class="strong">Metadata below is only relevant in
                             case you want a custom WAYF for your SP</p>
                     </dt>
@@ -96,6 +107,9 @@
                     <dd>
                         <ul>
                             <li><a href="/authentication/sp/certificate">Open link</a></li>
+                            {% for keyId in keyPairIds %}
+                                <li><a href="/authentication/sp/certificate/key:{{ keyId }}">Open link</a></li>
+                            {% endfor %}
                         </ul>
                     </dd>
                     <dt>
@@ -104,6 +118,9 @@
                     <dd>
                         <ul>
                             <li><a href="/authentication/sp/metadata">Open link</a></li>
+                            {% for keyId in keyPairIds %}
+                                <li><a href="/authentication/sp/metadata/key:{{ keyId }}">Open link</a></li>
+                            {% endfor %}
                         </ul>
                     </dd>
                 </dl>
@@ -119,6 +136,9 @@
                     <dd>
                         <ul>
                             <li><a href="/authentication/stepup/metadata">Open link</a></li>
+                            {% for keyId in keyPairIds %}
+                                <li><a href="/authentication/stepup/metadata/key:{{ keyId }}">Open link</a></li>
+                            {% endfor %}
                         </ul>
                     </dd>
                 </dl>
