Add metadata-endpoint to support KetenFO

--- a/theme/base/templates/modules/Authentication/View/Index/index.html.twig
+++ b/theme/base/templates/modules/Authentication/View/Index/index.html.twig
@@ -50,6 +50,14 @@
                         </ul>
                     </dd>
                     <dt>
+                        The KetenFO SAML metadata
+                    </dt>
+                    <dd>
+                        <ul>
+                            <li><a href="/authentication/proxy/ketenfo-metadata">Open link</a></li>
+                        </ul>
+                    </dd>
+                    <dt>
                         <p class="strong">Metadata below is only relevant in
                             case you want a custom WAYF for your SP</p>
                     </dt>
